--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<p>test</p>
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Javascript Roguelike</title>
+	</head>
+	<body>
+		<script src="assets/rot.min.js"></script>
+		<script src="assets/game.js"></script>
+	</body>
+</html>
